tests/error/rogue_semicolon.c
// fail
void (*_start)(struct *unresolved p;);
